--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "udit kumawat",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "cookie-session": "1.3.0",
+    "express": "^4.15.3",
+    "mongoose": "4.11.8",
+    "nodemon": "1.11.0",
+    "passport": "0.4.0",
+    "passport-google-oauth20": "1.0.0"
   }
 }
