example component added

--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,19 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":{
-    "/auth/google":{
-      "target":"http://localhost:5000"
+  "proxy": {
+    "/auth/google": {
+      "target": "http://localhost:5000"
     }
   },
   "dependencies": {
     "concurrently": "3.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.0.11",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
